# CodeGenerating

./: .gitignore  CodeGenerating.cabal  CodeGeneration.cabal  README
src/Code/: Expressions.hs  Import.hs  Mangler.hs  Module.hs  Utils.hs
src/Code/Generating/: Builder.hs  Expressions.hs  Import.hs  InternalUtils.hs  Mangler.hs  Module.hs  ModuleBuilder.hs  Package.hs  Utils.hs
src/Code/Generating/Builder/: Module.hs  ModuleBuilder.hs  Package.hs
src/Code/Generating/ModuleBuilder/: Class.hs  Module.hs  Package.hs
src/Code/Generating/Utils/: Exports.hs  Imports.hs  Module.hs  No.hs  Syntax.hs  Unsorted.hs
src/Code/Generating/Utils/Syntax/: Alt.hs  Decl.hs  Exp.hs  Names.hs  Pat.hs  Type.hs
src/Code/New/: Module.hs  ModuleBuilder.hs  Package.hs  Symbol.hs  SymbolTable.hs
src/Code/New/ModuleBuilder/: Class.hs  Module.hs  Package.hs
src/Code/Utils/: Module.hs  No.hs  Syntax.hs  Unsorted.hs
src/Code/Utils/Syntax/: Alt.hs  Decl.hs  Exp.hs  Names.hs  Pat.hs  Type.hs
tests/: Tests.hs
tests/Utils/: Type.hs
