name: CodeGeneration
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, containers -any, haskell-src-exts >=1.11
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Code.Expressions Code.Import Code.Mangler
                 Code.Module Code.Utils
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Code.New.SymbolTable Code.New.Symbol
               Code.New.Package Code.New.Module
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall
hugs-options:
nhc98-options:
jhc-options: